--- a/index.html
+++ b/index.html
@@ -21,17 +21,14 @@
         integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
 
-
-    <script src="vendors/js/jquery/jquery.min.js"></script>
-    <script src="vendors/js/bootstrap/bootstrap.min.js"></script>
+     <script src="vendors/js/jquery/jquery.min.js"></script>
+{#    <script src="vendors/js/bootstrap/bootstrap.min.js"></script>
     <script src="vendors/js/unison-js/unison-js.min.js" defer></script>
     <script src="vendors/js/feather-icons/feather-icons.min.js" defer></script>
     <script src="vendors/js/perfectscrollbar/perfect-scrollbar.min.js" defer></script>
     <script src="vendors/js/popper/popper.min.js" defer></script>
-    <script src="vendors/js/waves/waves.min.js" defer></script>
-    
-    <script src="js/core/app-menu.js" defer></script>
-    <script src="js/core/app.js" defer></script>
+    <script src="vendors/js/waves/waves.min.js" defer></script> #}
+
     <script type="module" src="/src/main.js"></script>
 
 </head>
@@ -39,8 +36,7 @@
 
 <!-- BEGIN: Body-->
 
-<body class="vertical-layout vertical-menu-modern  navbar-floating footer-static  " data-open="click"
-    data-menu="vertical-menu-modern" data-col="" id="app" >
+<body id="app">
 </body>
 <!-- END: Body-->
 
