--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
 
-     <script src="vendors/js/jquery/jquery.min.js"></script>
+     <script src="vendors/jquery/jquery-3.6.0.min.js"></script>
 
     <script type="module" src="/src/main.js"></script>
 
